[main] Fix table alignment for Edit table

--- a/web/js/packages/common/App.scss
+++ b/web/js/packages/common/App.scss
@@ -564,7 +564,6 @@ pre {
   font-size: 0.8em;
 }
 .overflow-x-scroll {
-  display: block;
   overflow-x: scroll;
   white-space: nowrap;
   ::-webkit-scrollbar {
